# aws-access-analyzer-validator

./: .gitignore  Makefile  README.md  aa_validator.py  pyproject.toml  tox.ini
.github/workflows/: python_ci.yaml
aa_validator/: __init__.py
examples/: sample_report.md
test/: test_integration.py
test/templates/: test-resources.yaml
