[tool.poetry]
name = "aws-access-analyzer-validator"
version = "0.4.0"
description = "A tool to validate existing identity and resource policies across regions and supported AWS services with AWS IAM Access Analyzer."
authors = ["Sami Jaktholm <sjakthol@outlook.com>"]
license = "MIT"
packages = [
  {include = "aa_validator"}
]
readme = 'README.md'

[tool.poetry.scripts]
aws-access-analyzer-validator = 'aa_validator:main'

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
boto3 = "^1.20.17"
pydash = ">=5.0.2,<9.0.0"

[tool.poetry.group.dev.dependencies]
boto3-stubs = {extras = ["accessanalyzer", "iam", "s3", "sqs", "sns", "ec2"], version = "^1.35.14"}
mypy = "^1.11.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = ">=0.6.4,<0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I"]
