[project]
name = "aws-access-analyzer-validator"
version = "0.4.0"
description = "A tool to validate existing identity and resource policies across regions and supported AWS services with AWS IAM Access Analyzer."
authors = [
    { name = "Sami Jaktholm", email = "sjakthol@outlook.com" }
]
license = "MIT"
readme = 'README.md'
requires-python = ">=3.8"
dependencies = [
  "boto3",
  "pydash",
]

[project.scripts]
aws-access-analyzer-validator = 'aa_validator:main'

[dependency-groups]
dev = [
  "boto3-stubs[accessanalyzer,iam,s3,sqs,sns,ec2]",
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
]

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "aa_validator"
module-root = ""

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]
